Finished core functionality of the app

--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ body {
     margin-top: 20px;
 }
 #progress {
-    width: 50%;
+    width: 0%;
     height: 10px;
     background-color: var(--teal);
     border-radius: 10px;
@@ -117,6 +117,10 @@ button {
 .task input {
     width: 20px;
     height: 20px;
+}
+.completed p{
+    text-decoration: line-through;
+    color: var(--teal);
 }
 .taskItem img {
     width: 24px;
